build/log/idf_py_stdout_output_3700
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\Team1.Temperate-and-Humidity\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 E:/Team1.Temperate-and-Humidity/build/bootloader/bootloader.bin"
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[2/9] Building C object esp-idf/uart_function/CMakeFiles/__idf_uart_function.dir/src/uart_function.c.obj
FAILED: esp-idf/uart_function/CMakeFiles/__idf_uart_function.dir/src/uart_function.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -IE:/Team1.Temperate-and-Humidity/build/config -IE:/Team1.Temperate-and-Humidity/components/uart_function/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=E:/Team1.Temperate-and-Humidity=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-1-g03a2cc88d8-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/uart_function/CMakeFiles/__idf_uart_function.dir/src/uart_function.c.obj -MF esp-idf\uart_function\CMakeFiles\__idf_uart_function.dir\src\uart_function.c.obj.d -o esp-idf/uart_function/CMakeFiles/__idf_uart_function.dir/src/uart_function.c.obj -c E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c
E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c: In function 'uart_send_data_task':
E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c:71:13: error: 'u8status' undeclared (first use in this function)
   71 |         if (u8status == DHT11_OK && bsend_data)
      |             ^~~~~~~~
E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c:71:13: note: each undeclared identifier is reported only once for each function it appears in
E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c:71:25: error: 'DHT11_OK' undeclared (first use in this function)
   71 |         if (u8status == DHT11_OK && bsend_data)
      |                         ^~~~~~~~
E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c:71:37: error: 'bsend_data' undeclared (first use in this function)
   71 |         if (u8status == DHT11_OK && bsend_data)
      |                                     ^~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c:73:60: error: 'u8temp' undeclared (first use in this function); did you mean 'mktemp'?
   73 |             snprintf(tempe_hex, sizeof(tempe_hex), "%02X", u8temp);
      |                                                            ^~~~~~
      |                                                            mktemp
E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c:78:58: error: 'u8humi' undeclared (first use in this function)
   78 |             snprintf(humi_hex, sizeof(humi_hex), "%02X", u8humi);
      |                                                          ^~~~~~
E:/Team1.Temperate-and-Humidity/components/uart_function/src/uart_function.c:83:20: error: 'u32data_interval' undeclared (first use in this function)
   83 |         vTaskDelay(u32data_interval / portTICK_PERIOD_MS);
      |                    ^~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
